2004-09-20  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* libeay32.dll, libssl32.dll:
	DLL updated to OpenSSL version 0.9.7d, build under Mingw GCC 3.4.1.

2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wspiapi.h:
	Remove DOS CR at end of lines.

2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wspiapi.h:
	Microsoft header file for emulate protocol independent API functions
	 if necessary. Need for support Windows 2000.

	* wspiapi.c:
	Need to compile wspiapi.h to object file.

	* makefile:
	Build libwspiapi.a.

2004-09-04  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* poll.adb:
	Use AWS.Net.Thin instead of AWS.Net.Sets.Thin.

2004-07-23  Pascal Obry  <pascal@obry.org>

	* poll.ads:
	Use definitions from AWS.OS_Lib.Definitions.
	Fix header.

	* poll.adb:
	Use definitions from AWS.OS_Lib.Definitions.
	Add comments.
	Fix header.

2004-07-07  Pascal Obry  <pascal@obry.org>

	* poll.adb:
	Fix casing.

2004-04-14  Pascal Obry  <pascal@obry.org>

	* poll.adb:
	Minor reformatting.